fix(dashboard): Fetch static email block resources from S3
In the future iteration S3 will be replaced by a CDN in front of it.

--- a/apps/dashboard/index.html
+++ b/apps/dashboard/index.html
@@ -11,6 +11,7 @@
     <link rel="manifest" href="/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://prod-novu-app-bucket.s3.us-east-1.amazonaws.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
